--- a/source/index.html
+++ b/source/index.html
@@ -4,15 +4,388 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Jewellery">
+  <style>
+    HTML {
+      background-repeat: no-repeat;
+      background-position:  50% 0;
+      /* Mobile layout by default */
+      background-image: url( "img/pixel-glass/page-main-mobile.jpg" );
+    }
+    /* Tablet */
+    @media ( min-width: 768px ) {
+      HTML {
+        /* Tablet layout */
+        background-image: url( "img/pixel-glass/page-main-tablet.jpg" );
+      }
+    }
+    /* Desktop */
+    @media ( min-width: 1024px ) {
+      HTML {
+        /* Desktop layout */
+        background-image: url( "img/pixel-glass/page-main-desktop.jpg" );
+      }
+    }
+  </style>
+  <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
+  <script src="../node_modules/pixel-glass/script.js"></script>
   <title>Jewellery catalog</title>
-  <link rel="preload" href="./fonts/poppins-v15-latin-500.woff2" as="font" type="font/woff2" crossorigin="">
+  <link rel="preload" href="fonts/poppins-v15-latin-500.woff2" as="font" type="font/woff2" crossorigin="">
   <link rel="preload" href="fonts/cormorant-garamond-v10-latin-700.woff2" as="font" type="font/woff2" crossorigin="">
   <link rel="preload" href="fonts/cormorant-garamond-v10-latin-600.woff2" as="font" type="font/woff2" crossorigin="">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="page">
-  <header class="page__header"></header>
-  <main class="page__main"></main>
+  <header class="page__header">
+    <div class="header__logo">
+      <a aria-label="Logo Jewellery" id="top">
+        <svg width="66" height="66">
+          <use href="img/sprite.svg#icon-logo"></use>
+        </svg>
+      </a>
+    </div>
+    <nav class="header__nav" id="menu">
+      <form action="https://echo.htmlacademy.ru" class="header__search" method="POST">
+        <label for="search">
+          <svg width="14" height="14">
+            <use href="img/sprite.svg#icon-search"></use>
+          </svg>
+          <span class="visually-hidden">Site search</span>
+        </label>
+        <input type="search" id="field-search" name="search" placeholder="Type here to search">
+      </form>
+      <ul class="header__nav-list nav-list">
+        <li class="nav-list__item">
+          <a href="#" class="nav-list__link">What’s new</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="catalog.html" class="nav-list__link">Chokers</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#" class="nav-list__link">Necklaces</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#" class="nav-list__link">Rings</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#" class="nav-list__link">Earrings</a>
+        </li>
+      </ul>
+      <ul class="header__sub-nav sub-list">
+        <li class="sub-list__item">
+          <a href="#" class="sub-list__link">About CH</a>
+        </li>
+        <li class="sub-list__item">
+          <a href="#" class="sub-list__link">Stores & Hours</a>
+        </li>
+        <li class="sub-list__item">
+          <a href="#" class="sub-list__link">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="header__user-menu user-menu">
+      <a class="user-menu__login" href="login.html" aria-label="Enter login">
+        Login
+      </a>
+      <a class="user-menu__cart" href="#">
+        <svg class="cart__icon" width="20" height="18">
+          <use href="img/sprite.svg#icon-cart"></use>
+        </svg>
+        <p>Cart <span>0</span></p>
+      </a>
+    </div>
+    <button class="header__burger-btn" aria-label="Menu">
+      <svg width="25" height="18">
+        <use href="img/sprite.svg#icon-burger"></use>
+      </svg>
+    </button>
+  </header>
+  <main class="page__main">
+    <h1 class="visually-hidden">Jewellery shop</h1>
+    <section class="promo">
+      <h2><span>Perfection</span>made to be yours</h2>
+    </section>
+    <section class="new">
+      <h2>New in</h2>
+      <a href="#" class="new__link">Shop now</a>
+      <div class="new__container main-slider">
+        <ul class="main-slider__list main-slider__list--no-js" id="main-slider">
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Necklace with amethyst</p>
+                  <p>$145</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Layered сhoker</p>
+                  <p>$115</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Gold chain</p>
+                  <p>$215</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Galaxy earrings</p>
+                  <p>$95</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Necklace with amethyst</p>
+                  <p>$145</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Layered сhoker</p>
+                  <p>$115</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Gold chain</p>
+                  <p>$215</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Galaxy earrings</p>
+                  <p>$95</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Necklace with amethyst</p>
+                  <p>$145</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Layered сhoker</p>
+                  <p>$115</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Gold chain</p>
+                  <p>$215</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+          <li class="main-slider__item">
+            <div class="product-card">
+              <div class="product-card__wrapper">
+                <div class="product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Galaxy earrings</p>
+                  <p>$95</p>
+                </div>
+              </div>
+              <a href="#" class="product-card__link"><span class="visually-hidden">Go to product page</span></a>
+            </div>
+          </li>
+        </ul>
+        <div class="main-slider__controls">
+          <button class="main-slider__button main-slider__button--prev" type="button">
+            <span class="visually-hidden">Show previous slide</span>
+            <svg width="30" height="11">
+              <use href="img/sprite_auto.svg#icon-arrow-left"></use>
+            </svg>
+          </button>
+          <button class="main-slider__button main-slider__button--next" type="button">
+            <span class="visually-hidden">Show next slide</span>
+            <svg width="30" height="11">
+              <use href="img/sprite_auto.svg#icon-arrow-right"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="main-slider__nav">
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>1
+          </button>
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>2
+          </button>
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>3
+          </button>
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>4
+          </button>
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>5
+          </button>
+          <button class="main-slider__number" type="button">
+            <span class="visually-hidden">Go to slide </span>6
+          </button>
+        </div>
+        <div class="main-slider__info">
+          <span class="main-slider__current">1</span> of 6
+        </div>
+      </div>
+    </section>
+    <section class="">
+      <h2 class=""></h2>
+    </section> <section class="">
+      <h2 class=""></h2>
+    </section> <section class="">
+      <h2 class=""></h2>
+    </section>
+  </main>
   <footer class="page__footer"></footer>
   <div class="overlay"></div>
   <div class="modal" tabindex="0" id="modal"></div>
