--- a/source/index.html
+++ b/source/index.html
@@ -105,9 +105,10 @@
           </button>
         </div>
         <div class="new-in__slider-wrapper swiper-wrapper">
+
           <div class="new-in__slide swiper-slide">
-            <div class="new-in__card">
-              <div class="new-in__card-image">
+            <div class="product-card">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
@@ -115,13 +116,15 @@
                   <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
                 </picture>
               </div>
-              <h3>Necklace with amethyst</h3>
-              <span>$145</span>
+              <div class="product-card__description">
+                <p>Necklace with amethyst</p>
+                <p>$145</p>
+              </div>
             </div>
           </div>
           <div class="new-in__slide swiper-slide">
-            <div class="new-in__card">
-              <div class="new-in__card-image">
+            <div class="product-card">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
@@ -129,13 +132,15 @@
                   <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
                 </picture>
               </div>
-              <h3>Layered сhoker</h3>
-              <span>$115</span>
+              <div class="product-card__description">
+                <p>Layered сhoker</p>
+                <p>$115</p>
+              </div>
             </div>
           </div>
           <div class="new-in__slide swiper-slide">
-            <div class="new-in__card">
-              <div class="new-in__card-image">
+            <div class="product-card">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
@@ -143,13 +148,15 @@
                   <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
                 </picture>
               </div>
-              <h3>Gold chain</h3>
-              <span>$215</span>
+              <div class="product-card__description">
+                <p>Gold chain</p>
+                <p>$215</p>
+              </div>
             </div>
           </div>
           <div class="new-in__slide swiper-slide">
-            <div class="new-in__card">
-              <div class="new-in__card-image">
+            <div class="product-card">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
@@ -157,10 +164,143 @@
                   <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
                 </picture>
               </div>
-              <h3>Galaxy earrings</h3>
-              <span>$95</span>
+              <div class="product-card__description">
+                <p>Galaxy earrings</p>
+                <p>$95</p>
+              </div>
             </div>
           </div>
+
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Necklace with amethyst</p>
+                <p>$145</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Layered сhoker</p>
+                <p>$115</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Gold chain</p>
+                <p>$215</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Galaxy earrings</p>
+                <p>$95</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Necklace with amethyst</p>
+                <p>$145</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Layered сhoker</p>
+                <p>$115</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Gold chain</p>
+                <p>$215</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Galaxy earrings</p>
+                <p>$95</p>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="swiper-pagination"></div>
       </div>
