--- a/source/index.html
+++ b/source/index.html
@@ -370,7 +370,133 @@
         </li>
       </ul>
     </section>
-
+    <section class="main__faq faq">
+      <h2>Frequently asked questions</h2>
+      <ul class="faq__list">
+        <li class="faq__item">
+          <h3>What materials are the jewellery made of?</h3>
+          <p>
+            Our jewellerry is made of solid gold, silver or leather. Also,
+            some jewellery contains precious and semiprecious stones and
+            crystals.
+          </p>
+          <button class="faq__button" type="button">
+            <span class="visually-hidden">Open / Close faq section</span>
+            <svg width="17" height="10">
+              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="faq__item">
+          <h3>Which countries do you deliver to?</h3>
+          <p>
+            Our jewellerry is made of solid gold, silver or leather. Also,
+            some jewellery contains precious and semiprecious stones and
+            crystals.
+          </p>
+          <button class="faq__button" type="button">
+            <span class="visually-hidden">Open / Close faq section</span>
+            <svg width="17" height="10">
+              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="faq__item">
+          <h3>What are the payment methods?</h3>
+          <p>
+            Our jewellerry is made of solid gold, silver or leather. Also,
+            some jewellery contains precious and semiprecious stones and
+            crystals.
+          </p>
+          <button class="faq__button" type="button">
+            <span class="visually-hidden">Open / Close faq section</span>
+            <svg width="17" height="10">
+              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="faq__item">
+          <h3>Can I return the jewellery&nbsp;if it didn’t fit me?</h3>
+          <p>
+            Our jewellerry is made of solid gold, silver or leather. Also,
+            some jewellery contains precious and semiprecious stones and
+            crystals.
+          </p>
+          <button class="faq__button" type="button">
+            <span class="visually-hidden">Open / Close faq section</span>
+            <svg width="17" height="10">
+              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="main__gallery gallery">
+      <h2>@Chjewellery</h2>
+      <a href="#" class="gallery__link section-link">Follow us</a>
+      <ul class="gallery__list">
+        <li class="gallery__item">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-8.webp 1x, img/gallery-8@2x.webp 2x">
+            <!-- 1x: 230px ; 2x: 460px -->
+            <img src="img/gallery-8.jpg" srcset="img/gallery-8@2x.jpg 2x" alt="Square earrings" width="230" height="230">
+          </picture>
+        </li>
+        <li class="gallery__item gallery__item--big">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-2.webp 1x, img/gallery-2@2x.webp 2x">
+            <!-- 1x: 400px ; 2x: 800px -->
+            <img src="img/gallery-2.jpg" srcset="img/gallery-2@2x.jpg 2x" alt="Big earrings" width="400" height="414">
+          </picture>
+        </li>
+        <li class="gallery__item gallery__item--hidden">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-4.webp 1x, img/gallery-4@2x.webp 2x">
+            <!-- 1x: 232px ; 2x: 464px -->
+            <img src="img/gallery-4.jpg" srcset="img/gallery-4@2x.jpg 2x" alt="Big bracelet" width="232" height="193">
+          </picture>
+        </li>
+        <li class="gallery__item gallery__item--hidden">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-6.webp 1x, img/gallery-6@2x.webp 2x">
+            <!-- 1x: 218px ; 2x: 436px -->
+            <img src="img/gallery-6.jpg" srcset="img/gallery-6@2x.jpg 2x" alt="Golden earrings" width="218" height="218">
+          </picture>
+        </li>
+        <li class="gallery__item">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="./img/gallery-1.webp 1x, ./img/gallery-1@2x.webp 2x">
+            <!-- 1x: 230px ; 2x: 460px -->
+            <img src="img/gallery-1.jpg" srcset="img/gallery-1@2x.jpg 2x" alt="Gemstone earrings" width="230" height="154">
+          </picture>
+        </li>
+        <li class="gallery__item">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-5.webp 1x, img/gallery-5@2x.webp 2x">
+            <!-- 1x: 218px ; 2x: 436px -->
+            <img src="img/gallery-5.jpg" srcset="img/gallery-5@2x.jpg 2x" alt="Jewellerry set" width="218" height="191">
+          </picture>
+        </li>
+        <li class="gallery__item">
+          <picture>
+            <!-- webp -->
+            <source type="image/webp" srcset="img/gallery-7.webp 1x, img/gallery-7@2x.webp 2x">
+            <!-- 1x: 232px ; 2x: 464px -->
+            <img src="img/gallery-7.jpg" srcset="img/gallery-7@2x.jpg 2x" alt="Jewellerry set" width="232" height="166">
+          </picture>
+        </li>
+      </ul>
+    </section>
   </main>
   <footer class="page__footer footer">
     <div class="footer__container">
