Главная и js к ней готов

--- a/source/index.html
+++ b/source/index.html
@@ -107,7 +107,6 @@
           </button>
         </div>
         <div class="new-in__slider-wrapper swiper-wrapper">
-
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
               <div class="product-card__image">
@@ -172,10 +171,57 @@
               </div>
             </div>
           </div>
-
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class="product-card__image">
+              <div class=product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/boho-earrings.webp 1x, img/products/boho-earrings@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/boho-earrings.jpg" srcset="img/products/boho-earrings@2x.jpg 2x" alt="Boho earrings" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Boho earrings</p>
+                <p>$75</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class=product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/bird-necklace.webp 1x, img/products/bird-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/bird-necklace.jpg" srcset="img/products/bird-necklace@2x.jpg 2x" alt="Gold bird necklace" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Gold bird necklace</p>
+                <p>$135</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class=product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/black-leather-choker-necklace.webp 1x, img/products/black-leather-choker-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/black-leather-choker-necklace.jpg" srcset="img/products/black-leather-choker-necklace@2x.jpg 2x" alt="Black leather choker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Black leather choker</p>
+                <p>$85</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class=product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
@@ -191,118 +237,70 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class="product-card__image">
+              <div class=product-card__image">
                 <picture>
                   <!-- webp -->
-                  <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                  <source type="image/webp" srcset="img/products/elephant-earrings.webp 1x, img/products/elephant-earrings@2x.webp 2x ">
                   <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  <img src="img/products/elephant-earrings.jpg" srcset="img/products/elephant-earrings@2x.jpg 2x" alt="Elephant earrings" width="270" height="272">
                 </picture>
               </div>
               <div class="product-card__description">
-                <p>Layered сhoker</p>
+                <p>Elephant earrings</p>
+                <p>$95</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class=product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/threader-necklace-closeup.webp 1x, img/products/threader-necklace-closeup@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/threader-necklace-closeup.jpg" srcset="img/products/threader-necklace-closeup@2x.jpg 2x" alt="Threader necklace" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Threader necklace</p>
                 <p>$115</p>
               </div>
             </div>
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class="product-card__image">
-                <picture>
-                  <!-- webp -->
-                  <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
-                  <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
-                </picture>
-              </div>
-              <div class="product-card__description">
-                <p>Gold chain</p>
-                <p>$215</p>
+              <div class="product-card">
+                <div class=product-card__image">
+                  <picture>
+                    <!-- webp -->
+                    <source type="image/webp" srcset="img/products/origami-crane-necklace.webp 1x, img/products/origami-crane-necklace@2x.webp 2x">
+                    <!-- 1x: 270px ; 2x: 540px -->
+                    <img src="img/products/origami-crane-necklace.jpg" srcset="img/products/origami-crane-necklace@2x.jpg 2x" alt="Origami crane necklace" width="270" height="272">
+                  </picture>
+                </div>
+                <div class="product-card__description">
+                  <p>Origami crane necklace</p>
+                  <p>$105</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class="product-card__image">
+              <div class=product-card__image">
                 <picture>
                   <!-- webp -->
-                  <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                  <source type="image/webp" srcset="img/products/marble-earrings.webp 1x, img/products/marble-earrings@2x.webp 2x">
                   <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  <img src="img/products/marble-earrings.jpg" srcset="img/products/marble-earrings@2x.jpg 2x" alt="Marble earrings" width="270" height="272">
                 </picture>
               </div>
               <div class="product-card__description">
-                <p>Galaxy earrings</p>
+                <p>Marble earrings</p>
                 <p>$95</p>
               </div>
             </div>
           </div>
-
-          <div class="new-in__slide swiper-slide">
-            <div class="product-card">
-              <div class="product-card__image">
-                <picture>
-                  <!-- webp -->
-                  <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
-                  <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="img/products/purple-gemstone-necklace.jpg" srcset="img/products/purple-gemstone-necklace@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
-                </picture>
-              </div>
-              <div class="product-card__description">
-                <p>Necklace with amethyst</p>
-                <p>$145</p>
-              </div>
-            </div>
-          </div>
-          <div class="new-in__slide swiper-slide">
-            <div class="product-card">
-              <div class="product-card__image">
-                <picture>
-                  <!-- webp -->
-                  <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
-                  <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
-                </picture>
-              </div>
-              <div class="product-card__description">
-                <p>Layered сhoker</p>
-                <p>$115</p>
-              </div>
-            </div>
-          </div>
-          <div class="new-in__slide swiper-slide">
-            <div class="product-card">
-              <div class="product-card__image">
-                <picture>
-                  <!-- webp -->
-                  <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
-                  <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
-                </picture>
-              </div>
-              <div class="product-card__description">
-                <p>Gold chain</p>
-                <p>$215</p>
-              </div>
-            </div>
-          </div>
-          <div class="new-in__slide swiper-slide">
-            <div class="product-card">
-              <div class="product-card__image">
-                <picture>
-                  <!-- webp -->
-                  <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
-                  <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
-                </picture>
-              </div>
-              <div class="product-card__description">
-                <p>Galaxy earrings</p>
-                <p>$95</p>
-              </div>
-            </div>
-          </div>
-
         </div>
         <div class="new-in__slider-pagination swiper-pagination"></div>
       </div>
