--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
                   <!-- 1x: 270px ; 2x: 540px -->
-                  <img src="./img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                  <img src="img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
                 </picture>
               </div>
               <div class="product-card__description">
@@ -173,7 +173,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/boho-earrings.webp 1x, img/products/boho-earrings@2x.webp 2x">
@@ -189,7 +189,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/bird-necklace.webp 1x, img/products/bird-necklace@2x.webp 2x">
@@ -205,7 +205,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/black-leather-choker-necklace.webp 1x, img/products/black-leather-choker-necklace@2x.webp 2x">
@@ -221,7 +221,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/purple-gemstone-necklace.webp 1x, img/products/purple-gemstone-necklace@2x.webp 2x">
@@ -237,7 +237,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/elephant-earrings.webp 1x, img/products/elephant-earrings@2x.webp 2x ">
@@ -253,7 +253,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/threader-necklace-closeup.webp 1x, img/products/threader-necklace-closeup@2x.webp 2x">
@@ -270,7 +270,7 @@
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
               <div class="product-card">
-                <div class=product-card__image">
+                <div class="product-card__image">
                   <picture>
                     <!-- webp -->
                     <source type="image/webp" srcset="img/products/origami-crane-necklace.webp 1x, img/products/origami-crane-necklace@2x.webp 2x">
@@ -287,7 +287,7 @@
           </div>
           <div class="new-in__slide swiper-slide">
             <div class="product-card">
-              <div class=product-card__image">
+              <div class="product-card__image">
                 <picture>
                   <!-- webp -->
                   <source type="image/webp" srcset="img/products/marble-earrings.webp 1x, img/products/marble-earrings@2x.webp 2x">
@@ -472,7 +472,7 @@
         <li class="gallery__item">
           <picture>
             <!-- webp -->
-            <source type="image/webp" srcset="./img/gallery-1.webp 1x, ./img/gallery-1@2x.webp 2x">
+            <source type="image/webp" srcset="img/gallery-1.webp 1x, ./img/gallery-1@2x.webp 2x">
             <!-- 1x: 230px ; 2x: 460px -->
             <img src="img/gallery-1.jpg" srcset="img/gallery-1@2x.jpg 2x" alt="Gemstone earrings" width="230" height="154">
           </picture>
@@ -551,7 +551,7 @@
           <li class="footer-social__item">
             <a href="#" class="footer-social__link">
               <svg width="8" height="15">
-                <use href="./img/sprite.svg#icon-fb"></use>
+                <use href="img/sprite.svg#icon-fb"></use>
               </svg>
               <p>Facebook</p>
             </a>
@@ -559,7 +559,7 @@
           <li class="footer-social__item">
             <a href="#" class="footer-social__link">
               <svg width="15" height="15">
-                <use href="./img/sprite.svg#icon-inst"></use>
+                <use href="img/sprite.svg#icon-inst"></use>
               </svg>
               <p>Instagram</p>
             </a>
@@ -567,7 +567,7 @@
           <li class="footer-social__item">
             <a href="#" class="footer-social__link">
               <svg width="16" height="15">
-                <use href="./img/sprite.svg#icon-pint"></use>
+                <use href="img/sprite.svg#icon-pint"></use>
               </svg>
               <p>Pinterest</p>
             </a>
@@ -575,7 +575,7 @@
           <li class="footer-social__item">
             <a href="#" class="footer-social__link">
               <svg width="15" height="13">
-                <use href="./img/sprite.svg#icon-tw"></use>
+                <use href="img/sprite.svg#icon-tw"></use>
               </svg>
               <p>Twitter</p>
             </a>
@@ -616,6 +616,6 @@
       </svg>
     </button>
   </div>
-  <!-- <script src="js/main.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 </html>
