--- a/source/index.html
+++ b/source/index.html
@@ -235,6 +235,70 @@
               </div>
             </div>
           </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/purple-necklace-desktop.webp 1x, img/products/purple-necklace-desktop@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/purple-necklace-desktop.jpg" srcset="img/products/purple-necklace-desktop@2x.jpg 2x" alt="Necklace with amethyst" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Necklace with amethyst</p>
+                <p>$145</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/layered-choker-necklace.webp 1x, img/products/layered-choker-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/layered-choker-necklace.jpg" srcset="img/products/layered-choker-necklace@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Layered сhoker</p>
+                <p>$115</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/dainty-gold-necklace.webp 1x, img/products/dainty-gold-necklace@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/dainty-gold-necklace.jpg" srcset="img/products/dainty-gold-necklace@2x.jpg 2x" alt="Gold chain" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Gold chain</p>
+                <p>$215</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-in__slide swiper-slide">
+            <div class="product-card">
+              <div class="product-card__image">
+                <picture>
+                  <!-- webp -->
+                  <source type="image/webp" srcset="img/products/galaxy-earrings.webp 1x, img/products/galaxy-earrings@2x.webp 2x">
+                  <!-- 1x: 270px ; 2x: 540px -->
+                  <img src="img/products/galaxy-earrings.jpg" srcset="img/products/galaxy-earrings@2x.jpg 2x" alt="Layered сhoker" width="270" height="272">
+                </picture>
+              </div>
+              <div class="product-card__description">
+                <p>Galaxy earrings</p>
+                <p>$95</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="new-in__slider-pagination swiper-pagination"></div>
       </div>
@@ -304,64 +368,64 @@
     </section>
     <section class="main__faq faq">
       <h2>Frequently asked questions</h2>
-      <ul class="faq__list">
-        <li class="faq__item">
+      <ul class="faq__list accordion">
+        <li class="faq__item accordion__item">
           <h3>What materials are the jewellery made of?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
             some jewellery contains precious and semiprecious stones and
             crystals.
           </p>
-          <button class="faq__button" type="button">
+          <button class="faq__button accordion__button" type="button">
             <span class="visually-hidden">Open / Close faq section</span>
             <svg width="17" height="10">
-              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
-              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+              <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
             </svg>
           </button>
         </li>
-        <li class="faq__item">
+        <li class="faq__item accordion__item">
           <h3>Which countries do you deliver to?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
             some jewellery contains precious and semiprecious stones and
             crystals.
           </p>
-          <button class="faq__button" type="button">
+          <button class="faq__button accordion__button" type="button">
             <span class="visually-hidden">Open / Close faq section</span>
             <svg width="17" height="10">
-              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
-              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+              <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-up"></use>
             </svg>
           </button>
         </li>
-        <li class="faq__item">
+        <li class="faq__item accordion__item">
           <h3>What are the payment methods?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
             some jewellery contains precious and semiprecious stones and
             crystals.
           </p>
-          <button class="faq__button" type="button">
+          <button class="faq__button accordion__button" type="button">
             <span class="visually-hidden">Open / Close faq section</span>
             <svg width="17" height="10">
-              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
-              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+              <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
             </svg>
           </button>
         </li>
-        <li class="faq__item">
+        <li class="faq__item accordion__item">
           <h3>Can I return the jewellery&nbsp;if it didn’t fit me?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
             some jewellery contains precious and semiprecious stones and
             crystals.
           </p>
-          <button class="faq__button" type="button">
+          <button class="faq__button accordion__button" type="button">
             <span class="visually-hidden">Open / Close faq section</span>
             <svg width="17" height="10">
-              <use class="faq__icon faq__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
-              <use class="faq__icon faq__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
+              <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
+              <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
             </svg>
           </button>
         </li>
