--- a/source/index.html
+++ b/source/index.html
@@ -369,7 +369,7 @@
     <section class="main__faq faq">
       <h2>Frequently asked questions</h2>
       <ul class="faq__list accordion">
-        <li class="faq__item accordion__item">
+        <li class="faq__item accordion__tab">
           <h3>What materials are the jewellery made of?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
@@ -384,7 +384,7 @@
             </svg>
           </button>
         </li>
-        <li class="faq__item accordion__item">
+        <li class="faq__item accordion__tab">
           <h3>Which countries do you deliver to?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
@@ -399,7 +399,7 @@
             </svg>
           </button>
         </li>
-        <li class="faq__item accordion__item">
+        <li class="faq__item accordion__tab">
           <h3>What are the payment methods?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
@@ -414,7 +414,7 @@
             </svg>
           </button>
         </li>
-        <li class="faq__item accordion__item">
+        <li class="faq__item accordion__tab">
           <h3>Can I return the jewellery&nbsp;if it didn’t fit me?</h3>
           <p>
             Our jewellerry is made of solid gold, silver or leather. Also,
