--- a/source/catalog.html
+++ b/source/catalog.html
@@ -97,7 +97,7 @@
           <div class="catalog__filter-wrapper">
             <form class="catalog__filter filter" action="https://echo.htmlacademy.ru" method="GET">
               <div class="filter__inner accordion accordion--js">
-                <div class="filter__block accordion__item filter__block--product">
+                <div class="filter__block accordion__tab filter__block--product">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Product</div>
                     <button class="filter__head-button accordion__button" type="button">
@@ -108,7 +108,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="accordion__content">
+                  <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
                         <input type="checkbox" class="visually-hidden" id="necklaces" name="necklaces" value="necklaces" checked>
@@ -129,7 +129,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion__item filter__block--material">
+                <div class="filter__block accordion__tab filter__block--material">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Material</div>
                     <button class="filter__head-button accordion__button" type="button">
@@ -140,7 +140,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="accordion__content">
+                  <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
                         <input type="checkbox" class="visually-hidden" id="gold" name="gold" value="gold" checked>
@@ -153,7 +153,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion__item filter__block--collection">
+                <div class="filter__block accordion__tab filter__block--collection">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Collection</div>
                     <button class="filter__head-button accordion__button" type="button">
@@ -164,7 +164,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="accordion__content">
+                  <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
                         <input type="checkbox" class="visually-hidden" id="flamingo" name="flamingo" value="flamingo">
@@ -177,7 +177,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion__item filter__block--price">
+                <div class="filter__block accordion__tab filter__block--price">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Price</div>
                     <button class="filter__head-button accordion__button" type="button">
@@ -188,7 +188,7 @@
                       </svg>
                     </button>
                   </div>
-                  <div class="accordion__content">
+                  <div class="filter__content accordion__content">
                     <div class="range" role="group" aria-label="price slider">
                       <label class="visually-hidden" for="min">Min price</label>
                       <input id="min" type="range" min="10" value="55" max="190" step="1">
