--- a/source/catalog.html
+++ b/source/catalog.html
@@ -521,23 +521,23 @@
   </footer>
   <div class="overlay"></div>
   <div class="modal-login" tabindex="0" id="login">
-    <h2>Log in</h2>
+    <h2>Log In</h2>
     <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="POST" id="login-form">
       <div class="modal-login__container">
         <div class="modal-login__field">
-          <input type="email" name="login-email" id="login-email" placeholder="Your E-mail" required="">
+          <input type="email" name="login-email" id="login-email" placeholder="Your E-mail" required>
           <label class="visually-hidden" for="login-email">
             Enter your E-mail
           </label>
         </div>
         <div class="modal-login__field">
-          <input type="password" name="login-password" id="login-password" placeholder="Password" required="">
+          <input type="password" name="login-password" id="login-password" placeholder="Password" required>
           <label class="visually-hidden" for="login-password">
             Enter your password
           </label>
           <a href="#">Forgot your password?</a>
         </div>
-        <button class="modal-login__button" type="submit">Log in</button>
+        <button class="modal-login__button" type="submit">Log In</button>
         <p>
           <span>Don’t have an account?</span>
           <a href="#">Sign up</a>
